# bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/assets/: game.py  request_manager.py
bot/assets/managers/: abstract_manager.py  game_manager.py
bot/exceptions/: already_exists_error.py  not_found_error.py  server_error.py
bot/filters/: group.py  private.py
bot/handlers/: game.py  start.py
bot/middlewares/: logging.py  requests.py
bot/utils/: attributed_dict.py
